Update OpenAPI spec, models, and controllers
Add 'Agent' to models, merge 'Used' into 'Reference', and remove special
models for paginated results. Clean up some of the labeling/descriptions
throughout the spec. Add 'list' operations for each path.
