# synprov/controllers/agents_controller.py
@@ -1,0 +1,29 @@
+import connexion
+import six
+
+from synprov.models.agent import Agent  # noqa: E501
+from synprov import util
+
+
+def get_agent(id):  # noqa: E501
+    """Get an existing.
+
+    Get an existing Agent # noqa: E501
+
+    :param id: The ID of the agent to fetch.
+    :type id: str
+
+    :rtype: Agent
+    """
+    return 'do some magic!'
+
+
+def list_agents():  # noqa: E501
+    """.
+
+    List Agents # noqa: E501
+
+
+    :rtype: List[Agent]
+    """
+    return 'do some magic!'
