# synprov/controllers/references_controller.py
@@ -1,0 +1,29 @@
+import connexion
+import six
+
+from synprov.models.reference import Reference  # noqa: E501
+from synprov import util
+
+
+def get_reference(id):  # noqa: E501
+    """Get an existing.
+
+    Get an existing Reference # noqa: E501
+
+    :param id: The ID of the entity to fetch.
+    :type id: str
+
+    :rtype: Reference
+    """
+    return 'do some magic!'
+
+
+def list_references():  # noqa: E501
+    """.
+
+    List References # noqa: E501
+
+
+    :rtype: List[Reference]
+    """
+    return 'do some magic!'
