# synprov/models/__init__.py
@@ -3,8 +3,7 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
-from synprov.models.json_activity import JsonActivity
-from synprov.models.json_activity_request import JsonActivityRequest
-from synprov.models.json_paginated_results_of_reference import JsonPaginatedResultsOfReference
-from synprov.models.json_reference import JsonReference
-from synprov.models.json_used import JsonUsed
+from synprov.models.activity import Activity
+from synprov.models.activity_request import ActivityRequest
+from synprov.models.agent import Agent
+from synprov.models.reference import Reference
