# synprov/models/json_reference.py
@@ -1,90 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from synprov.models.base_model_ import Model
-from synprov import util
-
-
-class JsonReference(Model):
-    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
-
-    Do not edit the class manually.
-    """
-
-    def __init__(self, target_version_number=None, target_id=None):  # noqa: E501
-        """JsonReference - a model defined in OpenAPI
-
-        :param target_version_number: The target_version_number of this JsonReference.  # noqa: E501
-        :type target_version_number: float
-        :param target_id: The target_id of this JsonReference.  # noqa: E501
-        :type target_id: str
-        """
-        self.openapi_types = {
-            'target_version_number': float,
-            'target_id': str
-        }
-
-        self.attribute_map = {
-            'target_version_number': 'targetVersionNumber',
-            'target_id': 'targetId'
-        }
-
-        self._target_version_number = target_version_number
-        self._target_id = target_id
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'JsonReference':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The json_Reference of this JsonReference.  # noqa: E501
-        :rtype: JsonReference
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def target_version_number(self):
-        """Gets the target_version_number of this JsonReference.
-
-
-        :return: The target_version_number of this JsonReference.
-        :rtype: float
-        """
-        return self._target_version_number
-
-    @target_version_number.setter
-    def target_version_number(self, target_version_number):
-        """Sets the target_version_number of this JsonReference.
-
-
-        :param target_version_number: The target_version_number of this JsonReference.
-        :type target_version_number: float
-        """
-
-        self._target_version_number = target_version_number
-
-    @property
-    def target_id(self):
-        """Gets the target_id of this JsonReference.
-
-
-        :return: The target_id of this JsonReference.
-        :rtype: str
-        """
-        return self._target_id
-
-    @target_id.setter
-    def target_id(self, target_id):
-        """Sets the target_id of this JsonReference.
-
-
-        :param target_id: The target_id of this JsonReference.
-        :type target_id: str
-        """
-
-        self._target_id = target_id
