# synprov/openapi/openapi.yaml
@@ -4,50 +4,58 @@ info:
   title: Provenance Service
   version: develop-SNAPSHOT
 servers:
-- url: ///rest
+- url: /rest
 tags:
 - description: "."
   name: Activities
+- description: "."
+  name: References
+- description: "."
+  name: Agents
 paths:
-  /repo/v1/activity:
+  /prov/v1/activities:
+    get:
+      description: List Activities
+      operationId: list_activities
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/Activity'
+                type: array
+          description: "."
+      summary: "."
+      tags:
+      - Activities
+      x-openapi-router-controller: synprov.controllers.activities_controller
     post:
       description: |-
-        Create a new <a
-        href="${org.sagebionetworks.repo.model.provenance.Activity}"
-        >Activity</a>. If the passed <a
-        href="${org.sagebionetworks.repo.model.provenance.Activity}">Activity</a>
-        object contains a <a
-        href="${org.sagebionetworks.repo.model.provenance.Used}" >Used</a> array,
-        you must set the concreteType field of each Used subclass.
-        <p>
-        Access Control: READ access is granted to those users who can see a single Entity that
-        was generated by this Activity.
-        </p>
+        Create a new Activity. If the passed Activity object contains a Used
+        array, you must set the concreteType field of each Used subclass.
       operationId: create_activity
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/json_ActivityRequest'
+              $ref: '#/components/schemas/ActivityRequest'
         required: true
       responses:
         201:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/json_Activity'
+                $ref: '#/components/schemas/Activity'
           description: "."
       summary: Create a new.
       tags:
       - Activities
       x-codegen-request-body-name: body
       x-openapi-router-controller: synprov.controllers.activities_controller
-  /repo/v1/activity/{id}:
+  /prov/v1/activities/{id}:
     delete:
-      description: |-
-        Delete an <a
-        href="${org.sagebionetworks.repo.model.provenance.Activity}">Activity</a>
-        <p><b>Access Control</b>: You must be the creator of the Activity to delete it.</p>
+      description: Delete an Activity
       operationId: delete_activity
       parameters:
       - description: The id of activity to delete.
@@ -58,29 +66,6 @@ paths:
         schema:
           type: string
         style: simple
-      - description: The user that is deleting the activity.
-        explode: true
-        in: query
-        name: user_id
-        required: true
-        schema:
-          type: number
-        style: form
-      requestBody:
-        content:
-          application/json:
-            schema:
-              description: |-
-                Delete an <a
-                href="${org.sagebionetworks.repo.model.provenance.Activity}">Activity</a>
-                <p><b>Access Control</b>: You must be the creator of the Activity to delete it.</p>
-              format: binary
-              type: string
-        description: |-
-          Delete an <a
-          href="${org.sagebionetworks.repo.model.provenance.Activity}">Activity</a>
-          <p><b>Access Control</b>: You must be the creator of the Activity to delete it.</p>
-        required: false
       responses:
         204:
           content:
@@ -95,13 +80,7 @@ paths:
       x-codegen-request-body-name: body
       x-openapi-router-controller: synprov.controllers.activities_controller
     get:
-      description: |-
-        Get an existing <a
-        href="${org.sagebionetworks.repo.model.provenance.Activity}">Activity</a>
-        <p>
-        <b>Access Control</b>: Granted to those users who can see a single Entity
-        that was generated by this Activity.
-        </p>
+      description: Get an existing Activity
       operationId: get_activity
       parameters:
       - description: The ID of the activity to fetch.
@@ -112,41 +91,12 @@ paths:
         schema:
           type: string
         style: simple
-      - description: The user that is doing the get.
-        explode: true
-        in: query
-        name: user_id
-        required: true
-        schema:
-          type: number
-        style: form
-      requestBody:
-        content:
-          application/json:
-            schema:
-              description: |-
-                Get an existing <a
-                href="${org.sagebionetworks.repo.model.provenance.Activity}">Activity</a>
-                <p>
-                <b>Access Control</b>: Granted to those users who can see a single Entity
-                that was generated by this Activity.
-                </p>
-              format: binary
-              type: string
-        description: |-
-          Get an existing <a
-          href="${org.sagebionetworks.repo.model.provenance.Activity}">Activity</a>
-          <p>
-          <b>Access Control</b>: Granted to those users who can see a single Entity
-          that was generated by this Activity.
-          </p>
-        required: false
       responses:
         200:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/json_Activity'
+                $ref: '#/components/schemas/Activity'
           description: "."
       summary: Get an existing.
       tags:
@@ -154,10 +104,7 @@ paths:
       x-codegen-request-body-name: body
       x-openapi-router-controller: synprov.controllers.activities_controller
     put:
-      description: |-
-        Update an <a
-        href="${org.sagebionetworks.repo.model.provenance.Activity}">Activity</a>
-        <p><b>Access Control</b>: You must be the creator of the Activity to modify it.</p>
+      description: Update an Activity
       operationId: update_activity
       parameters:
       - description: The id of the activity to update.
@@ -168,121 +115,126 @@ paths:
         schema:
           type: string
         style: simple
-      - description: The user that is doing the update.
-        explode: true
-        in: query
-        name: user_id
-        required: true
-        schema:
-          type: number
-        style: form
       requestBody:
         content:
           application/json:
             schema:
-              description: |-
-                Update an <a
-                href="${org.sagebionetworks.repo.model.provenance.Activity}">Activity</a>
-                <p><b>Access Control</b>: You must be the creator of the Activity to modify it.</p>
-              format: binary
-              type: string
-        description: |-
-          Update an <a
-          href="${org.sagebionetworks.repo.model.provenance.Activity}">Activity</a>
-          <p><b>Access Control</b>: You must be the creator of the Activity to modify it.</p>
+              $ref: '#/components/schemas/ActivityRequest'
+        description: Update an Activity
         required: false
       responses:
         200:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/json_Activity'
+                $ref: '#/components/schemas/Activity'
           description: "."
       summary: Update an.
       tags:
       - Activities
       x-codegen-request-body-name: body
       x-openapi-router-controller: synprov.controllers.activities_controller
-  /repo/v1/activity/{id}/generated:
+  /prov/v1/agents:
     get:
-      description: |-
-        <p>
-        Get the <a href="${org.sagebionetworks.repo.model.Entity}">Entities</a>
-        that were generatedBy an <a
-        href="${org.sagebionetworks.repo.model.provenance.Activity}"
-        >Activity</a>. Returns a <a
-        href="${org.sagebionetworks.reflection.model.PaginatedResults}">
-        PaginatedResults</a> of <a
-        href="${org.sagebionetworks.repo.model.Reference}">Reference</a> objects.
-        </p>
-        <p>
-        <b>Access Control</b>: This service will return References to all generatedBy
-        Entities, regardless of whether you have access to resolve them into full
-        Entity objects.
-        </p>
-      operationId: get_entities_generated_by
+      description: List Agents
+      operationId: list_agents
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/Agent'
+                type: array
+          description: "."
+      summary: "."
+      tags:
+      - Agents
+      x-openapi-router-controller: synprov.controllers.agents_controller
+  /prov/v1/agents/{id}:
+    get:
+      description: Get an existing Agent
+      operationId: get_agent
       parameters:
-      - explode: false
+      - description: The ID of the agent to fetch.
+        explode: false
         in: path
         name: id
         required: true
         schema:
           type: string
         style: simple
-      - explode: true
-        in: query
-        name: limit
-        required: false
-        schema:
-          default: 10
-          format: int32
-          type: integer
-        style: form
-      - explode: true
-        in: query
-        name: offset
-        required: false
-        schema:
-          default: 0
-          format: int32
-          type: integer
-        style: form
-      - explode: true
-        in: query
-        name: user_id
-        required: true
-        schema:
-          type: number
-        style: form
       responses:
         200:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/json_PaginatedResultsOfReference'
-            application/xml:
+                $ref: '#/components/schemas/Agent'
+          description: "."
+      summary: Get an existing.
+      tags:
+      - Agents
+      x-codegen-request-body-name: body
+      x-openapi-router-controller: synprov.controllers.agents_controller
+  /prov/v1/references:
+    get:
+      description: List References
+      operationId: list_references
+      responses:
+        200:
+          content:
+            application/json:
               schema:
-                $ref: '#/components/schemas/json_PaginatedResultsOfReference'
+                items:
+                  $ref: '#/components/schemas/Reference'
+                type: array
           description: "."
       summary: "."
       tags:
-      - Activities
-      x-openapi-router-controller: synprov.controllers.activities_controller
+      - References
+      x-openapi-router-controller: synprov.controllers.references_controller
+  /prov/v1/references/{id}:
+    get:
+      description: Get an existing Reference
+      operationId: get_reference
+      parameters:
+      - description: The ID of the entity to fetch.
+        explode: false
+        in: path
+        name: id
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Reference'
+          description: "."
+      summary: Get an existing.
+      tags:
+      - References
+      x-codegen-request-body-name: body
+      x-openapi-router-controller: synprov.controllers.references_controller
 components:
   schemas:
-    json_ActivityRequest:
+    ActivityRequest:
       example:
+        name: name
+        description: description
         used:
-        - reference: '...'
-          wasExecuted: true
-        - reference: '...'
-          wasExecuted: false
-        name: '...'
-        description: '...'
+        - role: role
+          entityId: entityId
+          entityVersionNumber: 0
+        - role: role
+          entityId: entityId
+          entityVersionNumber: 0
       properties:
         used:
           items:
-            $ref: '#/components/schemas/json_Used'
+            $ref: '#/components/schemas/Reference'
           type: array
         name:
           type: string
@@ -290,84 +242,91 @@ components:
           type: string
       title: ActivityRequest
       type: object
-    json_Activity:
+    Activity:
       example:
-        id: '...'
+        modifiedOn: 2000-01-23T04:56:07.000+00:00
+        generated:
+        - role: role
+          entityId: entityId
+          entityVersionNumber: 0
+        - role: role
+          entityId: entityId
+          entityVersionNumber: 0
+        createdBy: createdBy
+        name: name
+        description: description
+        etag: etag
+        modifiedBy: modifiedBy
+        id: id
         used:
-        - concreteType: '...'
-          wasExecuted: true
-        - concreteType: '...'
-          wasExecuted: true
-        createdBy: '...'
-        etag: '...'
-        modifiedOn: 12345
-        modifiedBy: '...'
-        createdOn: 12345
-        name: '...'
-        description: '...'
+        - role: role
+          entityId: entityId
+          entityVersionNumber: 0
+        - role: role
+          entityId: entityId
+          entityVersionNumber: 0
+        createdOn: 2000-01-23T04:56:07.000+00:00
+        agents:
+        - agentId: agentId
+          role: role
+        - agentId: agentId
+          role: role
       properties:
         id:
           type: string
         used:
           items:
-            $ref: '#/components/schemas/json_Used'
+            $ref: '#/components/schemas/Reference'
+          type: array
+        generated:
+          items:
+            $ref: '#/components/schemas/Reference'
+          type: array
+        agents:
+          items:
+            $ref: '#/components/schemas/Agent'
           type: array
         createdBy:
           type: string
         etag:
           type: string
         modifiedOn:
-          type: number
+          format: date-time
+          type: string
         modifiedBy:
           type: string
         createdOn:
-          type: number
+          format: date-time
+          type: string
         name:
           type: string
         description:
           type: string
       title: Activity
       type: object
-    json_PaginatedResultsOfReference:
+    Reference:
       example:
-        results:
-        - targetVersionNumber: 12345
-          targetId: '...'
-        - targetVersionNumber: 12345
-          targetId: '...'
-        effectiveSchema: '...'
-        totalNumberOfResults: 12345
+        role: role
+        entityId: entityId
+        entityVersionNumber: 0
       properties:
-        results:
-          items:
-            $ref: '#/components/schemas/json_Reference'
-          type: array
-        effectiveSchema:
-          type: string
-        totalNumberOfResults:
-          format: int64
+        entityVersionNumber:
+          format: int32
           type: integer
-      title: PaginatedResultsOfReference
-      type: object
-    json_Reference:
-      example:
-        targetVersionNumber: 12345
-        targetId: '...'
-      properties:
-        targetVersionNumber:
-          type: number
-        targetId:
+        entityId:
+          type: string
+        role:
           type: string
       title: Reference
       type: object
-    json_Used:
+    Agent:
       example:
-        reference: '...'
-        wasExecuted: true
+        agentId: agentId
+        role: role
       properties:
-        reference:
-          $ref: '#/components/schemas/json_Reference'
-        wasExecuted:
-          type: boolean
-      title: Used
+        agentId:
+          type: string
+        role:
+          type: string
+      title: Agent
       type: object
